adding coverage to sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,8 @@ sonar.projectName=Python RPG Battle
 sonar.projectVersion=0.0
 sonar.host.url=https://sonarcloud.io
 sonar.organization=carchi8py-github
+sonar.python.coverage.reportPath=coverage.xml
+sonar.exclusions=coverage.xml
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
